<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>search</class>
 <widget class="QDialog" name="search">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>550</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2">
   <item>
    <widget class="QLabel" name="label_4">
     <property name="font">
      <font>
       <family>微软雅黑 Light</family>
       <pointsize>18</pointsize>
      </font>
     </property>
     <property name="text">
      <string>游客查询</string>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QLabel" name="label_5">
       <property name="text">
        <string>起始站</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="start_city"/>
     </item>
     <item>
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>终点站</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="end_city"/>
     </item>
     <item>
      <widget class="QLabel" name="label_7">
       <property name="text">
        <string>出发时间</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDateEdit" name="dateEdit_city"/>
     </item>
     <item>
      <widget class="QPushButton" name="query_by_city">
       <property name="text">
        <string>按城市查询</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>起始站</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="start_station"/>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>终点站</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="end_station"/>
     </item>
     <item>
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>出发时间</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDateEdit" name="dateEdit_station"/>
     </item>
     <item>
      <widget class="QPushButton" name="query_by_station">
       <property name="text">
        <string>按站查询</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
          <string>用户注册</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item>
      <widget class="QTableWidget" name="tableWidget_2">
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
       <column>
        <property name="text">
         <string>新建列</string>
        </property>
       </column>
      </widget>
     </item>
     <item>
      <widget class="QScrollBar" name="verticalScrollBar">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QProgressBar" name="progressBar">
     <property name="value">
      <number>24</number>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
